--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     </script>
 </head>
 <body>
-    <p>If you are not redirected automatically, please <a href="https://sites.google.com/view/seokjucho/home">click here to go to the new site</a>.</p>
+    <p>If you are not redirected automatically, please <a href="https://sites.google.com/view/sangbeomlim/home">click here to go to the new site</a>.</p>
 </body>
 </html>
